--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta
       name="viewport"
-      content="width=device-width,initial-scale=1,user-scalable=no"
+      content="width=device-width,initial-scale=1,user-scalable=no,interactive-widget=resizes-content"
     />
     <link rel="icon" href="/favicon.ico" sizes="48x48" />
     <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" />
